--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 aniso8601==6.0.0
 Click==7.0
 Flask==1.0.3
-Flask-Cors==3.0.7
+Flask-Cors==3.0.8
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.0
 itsdangerous==1.1.0
@@ -12,3 +12,4 @@ pytz==2019.1
 six==1.12.0
 SQLAlchemy==1.3.4
 Werkzeug==0.15.5
+marshmallow==3.18.0
